MDEV-25996 sux_lock::s_lock(): Assertion !have_s() failed on startup

dict_check_sys_tables(): Correctly advance the cursor position.
This fixes a regression that was caused by
commit 49e2c8f0a6fefdeac50925f758090d6bd099768d (MDEV-25743).